Fixed the bug with gallery and testimonials section which overlapped. | Update #12 |

--- a/resources/sass/components/_testimonials.scss
+++ b/resources/sass/components/_testimonials.scss
@@ -33,7 +33,7 @@
     @media only screen and (max-width: $bp-medium) { padding: 2rem; margin: 5rem 3rem 0 3rem; }
     &__text {
         margin-bottom: 2rem;
-        z-index: 10;
+        z-index: 1;
         position: relative;
     }
     &__user { display: flex; align-items: center; }
